java-microservice/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
#      annotations:
#        sidecar.istio.io/inject: "true"
#        proxy.istio.io/config: '{"holdApplicationUntilProxyStarts": true}'
      labels:
        app: spring-boot-app
#      annotations:
#        readiness.status.sidecar.istio.io/applicationPorts: "9081"
#        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - name: spring-boot-app
        image: springio/gs-spring-boot-docker:latest
        ports:
        - containerPort: 8080
        # readinessProbe:
        #     httpGet:
        #       path: /actuator/health
        #       port: 9081
        #     initialDelaySeconds: 30
        #     periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 9081
        #     scheme: HTTP
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 9081
        #     scheme: HTTP
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
