java-microservice/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-vs
spec:
  hosts:
  - "*" # wildcard host to match all inbound HTTP traffic
  gateways:
  - spring-boot-gateway
  http:
  - route:
    - destination:
        host: spring-boot-service
        port:
          number: 80
